--- a/app/src/main/res/layout/fragment_applications.xml
+++ b/app/src/main/res/layout/fragment_applications.xml
@@ -1,191 +1,180 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".student.applications.StudentApplicationsFragment"
     android:background="@color/paleWhite">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="15dp">
 
-    <ScrollView
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp"
-        tools:ignore="MissingConstraints">
-
-        <LinearLayout
+        <!-- Title Section -->
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="?actionBarSize">
 
-            <!-- Title Section -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="MY APPLICATIONS"
                 android:textSize="36sp"
-                android:fontFamily="@font/bebas"
                 android:textColor="@color/indigo"
+                android:padding="10dp"
                 android:textAllCaps="true"
-                android:padding="10dp" />
+                android:fontFamily="@font/bebas"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="170dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="170dp">
+                android:layout_height="150dp"
+                android:background="@drawable/round_teal"
+                android:layout_margin="22dp">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:background="@drawable/round_teal"
-                    android:layout_margin="22dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Track Applications"
+                    android:textSize="25sp"
+                    android:fontFamily="@font/longreach"
+                    android:padding="20dp"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Track Applications"
-                        android:textSize="30sp"
-                        android:fontFamily="@font/longreach"
-                        android:padding="20dp"/>
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Track and view status of your submitted applications"
-                        android:textSize="12dp"
-                        android:padding="20dp"
-                        android:id="@+id/track_application_btn"
-                        android:layout_alignParentBottom="true"
-                        android:background="#00000000"/>
-
-                </RelativeLayout>
-
-                <ImageView
-                    android:layout_width="131dp"
-                    android:layout_height="100dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginTop="-5dp"
-                    android:src="@drawable/application_track_application_icon" />
-
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Track and view status of your submitted applications"
+                    android:textSize="12dp"
+                    android:padding="20dp"
+                    android:id="@+id/track_application_btn"
+                    android:layout_alignParentBottom="true"
+                    android:background="#00000000"/>
             </RelativeLayout>
+
+            <ImageView
+                android:layout_width="131dp"
+                android:layout_height="100dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="-5dp"
+                android:src="@drawable/application_track_application_icon" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="170dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="170dp">
+                android:layout_height="150dp"
+                android:background="@drawable/round_teal"
+                android:layout_margin="22dp">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:background="@drawable/round_teal"
-                    android:layout_margin="22dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Notifications"
+                    android:textSize="25sp"
+                    android:fontFamily="@font/longreach"
+                    android:padding="20dp"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=" Notifications"
-                        android:textSize="30sp"
-                        android:fontFamily="@font/longreach"
-                        android:padding="20dp"/>
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="View Application Notifications"
-                        android:textSize="12dp"
-                        android:padding="20dp"
-                        android:id="@+id/application_notification_btn"
-                        android:layout_alignParentBottom="true"
-                        android:background="#00000000"/>
-
-                </RelativeLayout>
-
-                <ImageView
-                    android:layout_width="128dp"
-                    android:layout_height="90dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginTop="-5dp"
-                    android:src="@drawable/application_notification_icon" />
-
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="View Application Notifications"
+                    android:textSize="12dp"
+                    android:padding="20dp"
+                    android:id="@+id/application_notification_btn"
+                    android:layout_alignParentBottom="true"
+                    android:background="#00000000"/>
             </RelativeLayout>
+
+            <ImageView
+                android:layout_width="128dp"
+                android:layout_height="90dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="-5dp"
+                android:src="@drawable/application_notification_icon" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="170dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="170dp">
+                android:layout_height="150dp"
+                android:background="@drawable/round_teal"
+                android:layout_margin="22dp">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:background="@drawable/round_teal"
-                    android:layout_margin="22dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="STUDENT FORMS"
+                    android:textSize="25sp"
+                    android:fontFamily="@font/longreach"
+                    android:padding="20dp"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="STUDENT FORMS"
-                        android:textSize="30sp"
-                        android:fontFamily="@font/longreach"
-                        android:padding="20dp"/>
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Access Student Forms here"
-                        android:textSize="12dp"
-                        android:padding="20dp"
-                        android:id="@+id/student_forms_btn"
-                        android:layout_alignParentBottom="true"
-                        android:background="#00000000"/>
-                </RelativeLayout>
-
-                <ImageView
-                    android:layout_width="150dp"
-                    android:layout_height="110dp"
-                    android:src="@drawable/checklist"
-                    android:layout_marginTop="-5dp"
-                    android:layout_alignParentRight="true"/>
-
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Access Student Forms here"
+                    android:textSize="12dp"
+                    android:padding="20dp"
+                    android:id="@+id/student_forms_btn"
+                    android:layout_alignParentBottom="true"
+                    android:background="#00000000"/>
             </RelativeLayout>
+
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="110dp"
+                android:src="@drawable/checklist"
+                android:layout_marginTop="-5dp"
+                android:layout_alignParentRight="true"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="170dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="170dp">
+                android:layout_height="150dp"
+                android:background="@drawable/round_teal"
+                android:layout_margin="22dp">
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:background="@drawable/round_teal"
-                    android:layout_margin="22dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Grade Re-Check"
+                    android:textSize="25sp"
+                    android:fontFamily="@font/longreach"
+                    android:padding="20dp"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Grade Re-Check"
-                        android:textSize="30sp"
-                        android:fontFamily="@font/longreach"
-                        android:padding="20dp"/>
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Apply for Grade Re-check here"
-                        android:textSize="12dp"
-                        android:padding="20dp"
-                        android:id="@+id/application_graderecheck_btn"
-                        android:layout_alignParentBottom="true"
-                        android:background="#00000000"/>
-
-                </RelativeLayout>
-
-                <ImageView
-                    android:layout_width="150dp"
-                    android:layout_height="110dp"
-                    android:src="@drawable/application_graderecheck_application_icon"
-                    android:layout_marginTop="-5dp"
-                    android:layout_alignParentRight="true"/>
-
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Apply for Grade Re-check here"
+                    android:textSize="12dp"
+                    android:padding="20dp"
+                    android:id="@+id/application_graderecheck_btn"
+                    android:layout_alignParentBottom="true"
+                    android:background="#00000000"/>
             </RelativeLayout>
-        </LinearLayout>
 
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="110dp"
+                android:src="@drawable/application_graderecheck_application_icon"
+                android:layout_marginTop="-5dp"
+                android:layout_alignParentRight="true"/>
+        </RelativeLayout>
 
-    </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+</ScrollView>
