--- a/app/src/main/res/layout/fragment_grades.xml
+++ b/app/src/main/res/layout/fragment_grades.xml
@@ -50,6 +50,15 @@
         android:orientation="vertical"
         android:visibility="visible">
 
+        <!-- Loading Indicator -->
+        <ProgressBar
+            android:id="@+id/loadingIndicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:visibility="gone" />
+
         <!-- Overall GPA Card -->
         <LinearLayout
             android:layout_width="match_parent"
@@ -108,14 +117,6 @@
             </HorizontalScrollView>
 
         </ScrollView>
-
-        <Button
-            android:id="@+id/printButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Print Grades"
-            android:layout_gravity="end|top"
-            android:layout_margin="16dp" />
 
     </LinearLayout>
 
