--- a/app/src/main/res/layout/fragment_application_grade_recheck.xml
+++ b/app/src/main/res/layout/fragment_application_grade_recheck.xml
@@ -161,6 +161,26 @@
                 android:textColor="@android:color/white"
                 android:layout_marginBottom="16dp" />
 
+            <TextView
+                android:id="@+id/alreadyAppliedMessage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="You have already previously submitted a Grade Re-Check Application for this course."
+                android:textColor="@color/red"
+                android:textSize="18sp"
+                android:visibility="gone"
+                android:gravity="center"
+                android:padding="16dp"/>
+
+            <Button
+                android:id="@+id/returnButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BACK"
+                android:backgroundTint="@color/indigo"
+                android:textColor="@android:color/white"
+                android:visibility="gone"/>
+
             <!-- Course info fields (hidden initially) -->
             <LinearLayout
                 android:id="@+id/courseInfoLayout"
