--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="paleWhite">#F1EDEE</color>
     <color name="indigo">#084B83</color>
     <color name="paleBlue">#EFF7FF</color>
+    <color name="light_gray">#FFCCCCCC</color>
+    <color name="teal_500">#009688</color>
 </resources>
