--- a/app/src/main/res/layout/fragment_applications.xml
+++ b/app/src/main/res/layout/fragment_applications.xml
@@ -163,7 +163,7 @@
                     android:text="Apply for Grade Re-check here"
                     android:textSize="12dp"
                     android:padding="20dp"
-                    android:id="@+id/application_graderecheck_btn"
+                    android:id="@+id/grade_recheck_btn"
                     android:layout_alignParentBottom="true"
                     android:background="#00000000"/>
             </RelativeLayout>
