--- a/app/src/main/res/layout/fragment_completed_grades.xml
+++ b/app/src/main/res/layout/fragment_completed_grades.xml
@@ -4,11 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TableLayout
-        android:id="@+id/gradesTable"
-        android:layout_width="wrap_content"
+    <HorizontalScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:stretchColumns="*"
-        tools:ignore="MissingConstraints" />
+        android:fillViewport="true"
+        android:scrollbars="horizontal"
+        tools:ignore="MissingConstraints">
+
+        <TableLayout
+            android:id="@+id/gradesTable"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:stretchColumns="*"/>
+    </HorizontalScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
